[package]
name = "simple-pow"
version = "0.1.0"
authors = ["Tomasz Bartos <tbartos+in@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
base64 = "0.13"
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
